objects/AcctSeed__Recurring_Journal_Entry_Line__c.object
<CustomObject>
    <description>Defines the line level detail of a recurring journal entry. Aggregation of recurring journal entry lines constitute a recurring journal entry.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Related Customer or Vendor</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Flow_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to categorize records in Cash Flow Statement.</inlineHelpText>
        <label>Cash Flow Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines (Cash Flow Category)</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Salesforce Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit__c</fullName>
        <inlineHelpText>The right side of a double entry accounting transaction. Represented as a negative amount in the transactions table.</inlineHelpText>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Debit__c</fullName>
        <inlineHelpText>The left side of a double entry accounting transaction. Represented as a positive amount in the transactions table.</inlineHelpText>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Salesforce User.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 1&quot; and must have a status of Active. One or more of these conditions have not been met.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 2&quot; and must have a status of Active. One or more of these conditions</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines (GL Variable 2)</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 3&quot; and must have a status of Active. One or more of these conditions</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines (GL Variable 3)</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credit GL Account used to record the transaction in the general ledger.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related product.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track a detailed component of Project.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>AcctSeed__Project_Task__c.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Typically used to track customer engagements or events.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <inlineHelpText>Quantity for Product Pricing, Hours for Service pricing or costing.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Journal_Entry__c</fullName>
        <inlineHelpText>Parent record for this line.</inlineHelpText>
        <label>Recurring Journal Entry</label>
        <referenceTo>AcctSeed__Recurring_Journal_Entry__c</referenceTo>
        <relationshipLabel>Recurring Journal Entry Lines</relationshipLabel>
        <relationshipName>Recurring_Journal_Entry_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Reference__c</fullName>
        <inlineHelpText>Used to capture any external source document identifier or description.</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recurring Journal Entry Line</label>
    <nameField>
        <displayFormat>RJEL-{00000}</displayFormat>
        <label>Recurring Journal Entry Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Journal Entry Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>